base/petshop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petshop
  labels:
    name: petshop
